[package]
name = "shebrusttest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.4"
actix = "0.13"
actix-web = "4.3"
actix-rt = "2.2"
awc = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26", features = ["full"] }